MDEV-20281 "[ERROR] Failed to write to mysql.slow_log:" without error reason

Add "backup" (in case of absence issued by error) reasons for failed logging.